Bug 1631754 - Improve code to distinguish between root and content handling of events. r=snorp,geckoview-reviewers

In particular, the eConsumeNoDefault case also needs to check for mTargetIsRoot
and the apz aware listeners flag.

Differential Revision: https://phabricator.services.mozilla.com/D75301